Updated API
- moved realtime to global instance
- updated API Spec
- updated session storage
- added new Middleware for global Pug objects
- updated Pagination with PrevUrl, current page
- added Auth Errors
- updated Team resource (WIP)
- updated User resource (WIP)
